comparison card overflow fix

--- a/src/component-library/careers/StatsCards/StatsCards.module.scss
+++ b/src/component-library/careers/StatsCards/StatsCards.module.scss
@@ -105,6 +105,7 @@
       max-width: px-to-rem(357);
       aspect-ratio: 357/184;
       align-self: start;
+      justify-self: end;
     }
   }
 }
